[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/art/ui.png" type="Texture" id=1]
[ext_resource path="res://assets/art/character.png" type="Texture" id=2]
[ext_resource path="res://game_screen/character/character.gd" type="Script" id=3]
[ext_resource path="res://game_screen/state_machine.gd" type="Script" id=4]
[ext_resource path="res://game_screen/character/moving_state.gd" type="Script" id=5]
[ext_resource path="res://game_screen/character/idle_state.gd" type="Script" id=6]
[ext_resource path="res://game_screen/character/interacting_state.gd" type="Script" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 7 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run_down"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_left"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 7 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_right"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 7 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "run_up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=10]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 7 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/idle/node = SubResource( 21 )
states/idle/position = Vector2( 199.5, 87 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 388.5, 86.5 )
transitions = [ "idle", "run", SubResource( 22 ), "run", "idle", SubResource( 23 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="CapsuleShape2D" id=25]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=29]
radius = 5.0
height = 8.0

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 22, 55, 3, 2 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 23, 38, 1, 1 )

[node name="Character" type="KinematicBody2D"]
position = Vector2( 56, 42 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="SelectionIndicator" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 0, 16, 16 )

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
vframes = 4
region_rect = Rect2( 0, 0, 16, 18 )

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle_down = SubResource( 16 )
anims/idle_left = SubResource( 14 )
anims/idle_right = SubResource( 15 )
anims/idle_up = SubResource( 13 )
anims/run_down = SubResource( 3 )
anims/run_left = SubResource( 4 )
anims/run_right = SubResource( 5 )
anims/run_up = SubResource( 1 )

[node name="BodyAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../BodyAnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/idle/blend_position = Vector2( -0.000496268, -0.00662649 )
parameters/run/blend_position = Vector2( 0, 0.103863 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 25 )

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( 0, 9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
modulate = Color( 0.87451, 1, 0.141176, 1 )
rotation = 1.5708
shape = SubResource( 29 )

[node name="CharacterState" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("MovingState")

[node name="MovingState" type="Node" parent="CharacterState"]
script = ExtResource( 5 )

[node name="IdleState" type="Node" parent="CharacterState"]
script = ExtResource( 6 )

[node name="InteractingState" type="Node" parent="CharacterState"]
script = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1000

[node name="InteractionProgress" type="TextureProgress" parent="Node2D"]
visible = false
margin_left = 9.0
margin_top = -13.0
margin_right = 10.0
margin_bottom = 8.0
value = 44.0
texture_under = SubResource( 27 )
texture_progress = SubResource( 28 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
